# chess_gui

./: .gitignore  Cargo.toml
src/: board_vis.rs  engine_player.rs  main.rs
